Update .lines z-index to fix highlighting
The text highlighting upon selection was not working for me. This is a potential workaround.

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -68,5 +68,6 @@ atom-text-editor, atom-text-editor::shadow {
         .line {
             background-color: transparent;
         }
+        z-index: -1;
     }
 }
